--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <title>Tallinn Airport</title>
 </head>
@@ -163,8 +166,33 @@
         <button id="search-close" class="search-close">✕ Tühista</button>
       </div>
       <div class="header-2-row-container">
-        <nav>
-
+        <nav class="navigation-services">
+          <span>
+            <a href="#"><img src="images/2017-01-11-lennujaam-logos-rgb-16_ukraina.svg" width="235" height="80"></a>
+          </span>
+          <ul class="navbar-2">
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>Flight info</b></a>
+            </li>
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>Safe travelling</b></a>
+            </li>
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>Passengers</b></a>
+            </li>
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>Services</b></a>
+            </li>
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>Transport</b></a>
+            </li>
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>For Partners</b></a>
+            </li>
+            <li class="nav-item-2">
+              <a class="nav-link" role="button" data-bs-toggle="collapse" href="#" tabindex="3"><b>Groundhandling</b></a>
+            </li>
+          </ul>
         </nav>
       </div>
     </div>
